--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Panther Config
-panther_config>=0.0.17<=0.1.0
+panther_config==0.0.19
 
 # Panther Content
-panther_utils>=0.0.5<=0.1.0
-panther_okta>=0.0.3<=0.1.0
+panther_utils==0.1.0
+panther_okta==0.1.0
 
 # Development dependencies
 requests==2.28.1
