--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Panther Config
-panther_config>=0.0.17<=0.1.0
+panther_config>=0.0.17
 
 # Panther Content
 panther_utils>=0.0.5<=0.1.0
@@ -11,3 +11,6 @@ mypy>=0.0.0<1.0.0
 black>=22
 nose>=1.3
 coverage>=6.4.4
+panther_analysis_tool==0.16.0
+panther_classic_converter>=0.0.1
+docopt==0.6.2
