--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ mypy = ">=0.0.0"
 black = "~=22.8"
 nose = ">=1.3"
 coverage = ">=6.4.4"
+panther_analysis_tool = ">=0.16.0"
 
 [packages]
 panther_sdk = "~=0.0.19"
