--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,9 +13,12 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Install pipenv
+        run: pip install pipenv
+
       - name: Install dependencies
         run: |
-          pip3 install -r requirements.txt
+          make ci_install
 
       - name: fmt
         run: make ci_fmt
@@ -38,9 +41,12 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Install pipenv
+        run: pip install pipenv
+
       - name: Install dependencies
         run: |
-          pip3 install -r requirements.txt
+          make ci_install
 
       - name: test
         run: make ci_test
