use pipenv to run sdk

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: make ci_test
 
       - name: SDK Run
-        run: python -m panther_content
+        run: make ci_run_sdk
 
       # Uncomment once secrets are configured
       
