--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
         run: pip install pipenv
 
       - name: Install dependencies
-        run: |
-          make ci_install
+        run: make ci_install
 
       - name: fmt
         run: make ci_fmt
