--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,12 @@ mypy = ">=0.0.0"
 black = "~=22.8"
 nose = ">=1.3"
 coverage = ">=6.4.4"
+panther_analysis_tool = ">=0.17.0"
 
 [packages]
-panther_config = "~=0.0.17"
-panther_utils = "~=0.0.5"
-panther_okta = "~=0.0.3"
+panther_sdk = "~=0.0.19"
+panther_utils = "~=0.2.0"
+panther_okta = "~=0.2.0"
 requests = "==2.28.1"
 
 [requires]
