--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,11 @@ black = "~=22.8"
 nose = ">=1.3"
 coverage = ">=6.4.4"
 panther_analysis_tool = ">=0.17.0"
+pylint = "*"
 
 [packages]
-panther_sdk = "~=0.0.19"
-panther_utils = "~=0.2.0"
-panther_okta = "~=0.2.0"
+panther_sdk = "~=0.0.24"
+panther_detections = ">=0.0.7"
 requests = "==2.28.1"
 
 [requires]
