--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-mypy = ">=0.0.0"
 black = "~=22.8"
 nose = ">=1.3"
 coverage = ">=6.4.4"
-panther_analysis_tool = ">=0.16.0"
+panther_analysis_tool = ">=0.19.5"
+mypy = "1.0.0"
 
 [packages]
-panther_sdk = "~=0.0.19"
-panther_utils = "~=0.2.0"
-panther_okta = "~=0.2.0"
-requests = "==2.28.1"
+panther_sdk = ">=0.0.24"
+panther_detections = ">=0.0.8"
 
 [requires]
 python_version = "3.9"
