--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,6 @@
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/*.pyc": true,
-        "**/__pycache__": true
-    },
-    
-   "python.pythonPath": "/Users/lindseyw/.local/share/virtualenvs/my-panther-content-XOuSVQqp/bin/python",
+   "python.defaultInterpreterPath": "<REPLACE_ME>",
+   "python.pythonPath": "<REPLACE_ME>",
    "python.terminal.activateEnvironment": true,
    "python.analysis.symbolsHierarchyDepthLimit": 10,
 }
